--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <button id="save" class="btn btn-success">SAVE</button>
         <button id="load" class="btn btn-secondary">LOAD</button>
         <button id = "clr" class="btn btn-danger">CLEAR ALL</button>
-        <button class="btn btn-success">Save to Server</button>
-        <button class="btn btn-secondary">Load from server</button></br>
+       <!---- <button class="btn btn-success">Save to Server</button>
+        <button class="btn btn-secondary">Load from server</button></br>------>
         <input type = "number" id = "inp" placeholder="Enter Id">
         <button id = "search" class="btn btn-info">Search</button>
       </div>
